--- a/MvcCsharp/Web.config
+++ b/MvcCsharp/Web.config
@@ -14,9 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <customErrors mode="On">
+    <!--<customErrors mode="On">
       
-    </customErrors>
+    </customErrors>-->
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <httpModules>
