--- a/MvcCsharp/MvcCsharp.csproj
+++ b/MvcCsharp/MvcCsharp.csproj
@@ -147,14 +147,17 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\PersonsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Auth_Repository.cs" />
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Login.cs" />
     <Compile Include="ViewModels\Persons.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -202,6 +205,7 @@
     <Content Include="Views\Persons\Details.cshtml" />
     <Content Include="Views\Persons\Delete.cshtml" />
     <Content Include="Views\Persons\UpdatePerson.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
