--- a/MvcCsharp/bin/MvcCsharp.dll.config
+++ b/MvcCsharp/bin/MvcCsharp.dll.config
@@ -17,6 +17,9 @@
     <!--<customErrors mode="On">
       
     </customErrors>-->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <httpModules>
